// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoteUtils createStubNotes, root -> bar.one: barChild 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [],
    "created": "TODO",
    "data": Object {},
    "desc": "",
    "fname": "bar.one",
    "parent": "bar",
    "stub": false,
    "title": "bar.one",
    "type": "note",
    "updated": "TODO",
  },
]
`;

exports[`schema domainRoot at child: fooChild_body 1`] = `
"\`\`\`
-
    id: foo.child
    title: foo.child
    desc: \\"\\"
    children: [foo.grandchild]
    parent: foo.root
    data: {}
    fname: foo.child
-
    id: foo.grandchild
    title: foo.grandchild
    desc: \\"\\"
    children: []
    parent: foo.child
    data: {}
    fname: foo.grandchild

\`\`\`"
`;

exports[`schema domainRoot at root: foo_body 1`] = `
"\`\`\`
-
    id: foo.root
    title: foo.root
    desc: \\"\\"
    children: [foo.child]
    parent: root
    data: {}
    fname: foo.root
-
    id: foo.child
    title: foo.child
    desc: \\"\\"
    children: [foo.grandchild]
    parent: foo.root
    data: {}
    fname: foo.child
-
    id: foo.grandchild
    title: foo.grandchild
    desc: \\"\\"
    children: []
    parent: foo.child
    data: {}
    fname: foo.grandchild

\`\`\`"
`;
